# poetry_article

./: .gitignore  Readme.md
Deploy/: build_docker_images.sh  build_project_wheels.py
Deploy/helm/: values.yaml
Deploy/helm/templates/apps/: order_manager.yaml  user_manager.yaml
Deploy/helm/templates/system/: configmap.yaml  ingress.yaml
Microservices/OrderManager/: Dockerfile  Dockerfile.dockerignore  pyproject.toml  requirements.txt  setup.py
Microservices/OrderManager/order_manager/: main.py
Microservices/UserManager/: Dockerfile  Dockerfile.dockerignore  pyproject.toml  requirements.txt  setup.py
Microservices/UserManager/user_manager/: main.py
Shared/DiscountCalculator/: pyproject.toml  setup.py
Shared/DiscountCalculator/discount_calculator/: calculator.py
