[tool.poetry]
name = "order_manager"
version = "0.1.0"
description = ""
authors = ["admin"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.2.2"
discount_calculator = {path = "../../Shared/DiscountCalculator"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
